# jmp-payload

./: .devcontainer.json.license  .envrc  .envrc.license  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Cargo.lock.license  Cargo.toml  LICENSE  README.md  REUSE.toml  devenv.nix  devenv.yaml  flake.lock.license  flake.nix  i386-unknown-none.json  rust-toolchain.license  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: clean-old-workflow-runs.yml  verify-pr-commit.yml  verify-reuse-compliance.yml
.reuse/: dep5
src/arch/aarch64/boot_frame_arch_aarch64_mtk/: Cargo.toml
src/arch/aarch64/booters_arch_aarch64_mtk/: Cargo.toml
src/arch/aarch64/booters_arch_aarch64_mtk/src/: main.rs
src/arch/aarch64/booters_arch_aarch64_qcom/: Cargo.toml
src/arch/aarch64/booters_arch_aarch64_qcom/src/: main.rs
src/arch/aarch64/r_boot_arch_aarch64_mtk/: Cargo.toml
src/arch/x86/boot_frame_arch_x86_bios/.cargo/: config
src/arch/x86/booters_arch_x86_bios/: Cargo.toml
src/arch/x86/r_boot_arch_x86_bios/: Cargo.toml
src/arch/x86/r_boot_arch_x86_bios/src/: main.rs
src/arch/x86_64/boot_frame_arch_x86_64_efi/: Cargo.toml
src/arch/x86_64/booters_arch_x86_64_bios/: Cargo.toml
src/arch/x86_64/booters_arch_x86_64_uefi/: Cargo.toml
src/arch/x86_64/r_boot_arch_x86_64_bios/: Cargo.toml
src/arch/x86_64/r_boot_arch_x86_64_efi/: Cargo.toml
src/arch/x86_64/r_boot_arch_x86_64_efi/src/: main.rs
src/boot_frame_common/: Cargo.toml
src/boot_frame_core/: Cargo.toml
src/booters_hal_mtk/: Cargo.toml
src/booters_hal_pc_x86/: Cargo.toml
src/booters_hal_qcom/: Cargo.toml
src/lib/booters_core/: Cargo.toml
src/lib/booters_core/src/: lib.rs
src/lib/booters_hal_mtk/: Cargo.toml
src/lib/booters_hal_mtk/src/: lib.rs
src/lib/booters_hal_pc_x86_64/: Cargo.toml
src/lib/booters_hal_qcom/: Cargo.toml
src/lib/booters_hal_uefi_x86_64/: Cargo.toml
src/lib/booters_hal_uefi_x86_64/src/: lib.rs
src/lib/common/: Cargo.toml
src/lib/common/src/: lib.rs
src/r_boot_arch_aarch64/r_boot_arch_aarch64_mtk/: Cargo.toml
src/r_boot_arch_aarch64/r_boot_arch_aarch64_mtk/src/: lib.rs  main.rs
src/r_boot_arch_x86/r_boot_arch_x86_bios/: Cargo.toml
src/r_boot_arch_x86/r_boot_arch_x86_bios/src/: main.rs
src/r_boot_arch_x86_64/r_boot_arch_x86_64_bios/: Cargo.toml
src/r_boot_arch_x86_64/r_boot_arch_x86_64_efi/: Cargo.toml
src/r_boot_common/: Cargo.toml
src/r_boot_core/: Cargo.toml
src/targets/lk/: Cargo.toml
src/targets/u_boot/: Cargo.toml
src/targets/uefi/: Cargo.toml
src/targets/uefi/src/: main.rs
