# SPDX-FileCopyrightText: 2023 The Booters Developers
#
# SPDX-License-Identifier: GPL-3.0-only

[workspace]
members = [
	"src/lib/booters_core",
	"src/lib/booters_hal_mtk",
	"src/lib/booters_hal_qcom",
	"src/lib/booters_hal_uefi_x86_64",
  "src/bin/mtk_arm64/",
  "src/bin/qcom_arm64/",
  "src/bin/uefi_x86_64/"
]
resolver = "1"

[profile.dev]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true
strip = true
incremental = false

[profile.dev.package."*"]
codegen-units = 1
opt-level = 'z'
debug = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
debug = false
strip = true
incremental = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 'z'
strip = true
incremental = false
debug = false
