# SPDX-FileCopyrightText: 2024 The JMP.boot Developers
#
# SPDX-License-Identifier: GPL-3.0-only

[workspace]
members = [
	"src/lib/common",
  "src/targets/lk/",
  "src/targets/u_boot/",
  "src/targets/uefi"
]
resolver = "1"

[workspace.package]
authors = ["The JMP.boot Developers"]
rust-version = "1.77"
license = "GPL-3.0-only"

[workspace.dependencies]
android-sparse = "0.6.0"
embedded-io = "0.6.1"
ext4-view = "0.4.1"
gpt = { version = "3.1.0", default-features = false }

[profile.dev]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true
strip = true
incremental = false

[profile.dev.package."*"]
codegen-units = 1
opt-level = 'z'
debug = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
debug = false
strip = true
incremental = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 'z'
strip = true
incremental = false
debug = false
