cargo-features = ["per-package-target"]

[package]
name = "booters_arch_x86_64_uefi"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-uefi"

[[bin]]
name = "booters_x86_64_efi"
path = "src/main.rs"

[dependencies]
uefi = { version = "0.16.0", features = ["exts"] }
uefi-services = "0.13.0"
